example/lib/src/generated/errors/errors_localization_ro.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Romanian Moldavian Moldovan (`ro`).
class ErrorsLocalizationRo extends ErrorsLocalization {
  ErrorsLocalizationRo([String locale = 'ro']) : super(locale);

  @override
  String get error => 'A apărut o eroare';

  @override
  String get unexpectedError => 'A apărut o eroare neașteptată';

  @override
  String get bugReportSentText => 'Raportul de eroare a fost trimis cu succes.';
}
